--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
-
+@import './variables';
 
 /* BODY */
 
@@ -19,17 +19,20 @@ body{
 .banner{
    display: flex;
    height: 150px;
-   padding: 0 0 0 50px;
-   .logo{
-       margin: 10px 50px 0 0;
-   }
+   padding: 0;  
+}
+
+.logo{
+    margin: 10px 50px 0 50px;
 }
 
 .categories{
     display: flex;
     flex-wrap: wrap;
-    padding-right: 450px;
     justify-content: center;
+    &--banner{
+        padding-right: 450px;
+    }
     .tag{
         list-style: none;
         margin:10px 0 0 5px;
@@ -37,10 +40,15 @@ body{
             text-decoration: none;
             font-weight: 500;
             font-size: 0.75em;
-            color: #901C1C;
+            color: $primary-color;
             padding: 3px 7px;
             border: 1px solid #C4C4C4;
             border-radius: 11px;
+            &:hover, &:focus{
+                background-color: $primary-color;
+                border: $primary-color;
+                color: white;
+            }
         }
     }
 }
@@ -58,20 +66,22 @@ h1{
     top: -140px;
     font-size: 2.25em;
     font-weight: 400;
-    color: #901C1C;
+    color: $primary-color;
 }
 
 .photographers{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-right: 30px;
 }
 
 .photographer-card{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 40px;
+    margin: 50px 20px;
+    min-width: 25%;
     &__picture{
         width: 200px;
         height: 200px;
@@ -82,13 +92,13 @@ h1{
         }
     }
     &__name{
-        color: #D3573C;
+        color: $secondary-color;
         font-size: 2.25em;
         font-weight: 400;
         margin-bottom: 0;
     }
     &__location{
-        color: #901C1C;
+        color: $primary-color;
         font-size: 0.8125em;
         margin: 0;
     }
@@ -104,5 +114,61 @@ h1{
     &__categories{
         padding: 0;
         margin: 6px 0 0 0;
+    }
+}
+
+/* MEDIAS QUERIES */
+
+/* TABLET */
+
+@media (max-width: 1024px){
+
+    .banner{
+        display: block;
+    }
+
+    .categories--banner{
+        padding: 0;
+    }
+
+    h1{
+        top: -140px;
+        font-size: 1.7em;
+    }
+
+    .photographers{
+        justify-content: center;
+    }
+
+    .photographer-card{
+        min-width: 40%;
+    }
+}
+
+/* MOBILE */
+
+@media (max-width: 768px){
+    .logo{
+        margin: 10px 50px 0 20px;
+        img{
+            width: 160px;
+        }
+    }
+
+    .categories--banner{
+        margin: 20px 30px;
+    }
+    
+    h1{
+        right: 20px;
+        font-size: 0.875em;
+    }
+
+    .photographers{
+        margin-right: 0;
+    }
+
+    .photographer-card{
+        width: 100%;
     }
 }
