--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,7 +5,6 @@
 
 body{
     max-width: 1440px;
-    padding: 44px 0px;
     margin: 0 auto;
     font-family: 'DM Sans', sans-serif;
 }
@@ -14,6 +13,14 @@ body{
 
 .toMain {
     display: none;
+    background-color: #DB8876;
+    font-weight: 700;
+    font-size: 1.125em;
+    width: 182px;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 5px;
+    margin: 6px auto 20px auto;
 }
 
 .banner{
@@ -31,7 +38,7 @@ body{
     flex-wrap: wrap;
     justify-content: center;
     &--banner{
-        padding-right: 450px;
+        padding: 0 450px 0 60px;
     }
     .tag{
         list-style: none;
@@ -69,7 +76,7 @@ h1{
     color: $primary-color;
 }
 
-.photographers{
+#photographers-section{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -82,6 +89,12 @@ h1{
     align-items: center;
     margin: 50px 20px;
     min-width: 25%;
+    &__link{
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
     &__picture{
         width: 200px;
         height: 200px;
@@ -136,7 +149,7 @@ h1{
         font-size: 1.7em;
     }
 
-    .photographers{
+    #photographers{
         justify-content: center;
     }
 
@@ -164,7 +177,7 @@ h1{
         font-size: 0.875em;
     }
 
-    .photographers{
+    #photographers{
         margin-right: 0;
     }
 
