--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,14 +5,20 @@
 
 body{
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 20px auto 0 auto;
     font-family: 'DM Sans', sans-serif;
 }
 
 /* HEADER */
 
-.toMain {
+#to-main {
     display: none;
+    position: fixed;
+    text-decoration: none;
+    color: black;
+    left: 50%;
+    margin: -14px 0 0 -107px;
+    z-index: 9999;
     background-color: #DB8876;
     font-weight: 700;
     font-size: 1.125em;
@@ -20,7 +26,6 @@ body{
     line-height: 30px;
     text-align: center;
     border-radius: 5px;
-    margin: 6px auto 20px auto;
 }
 
 .banner{
@@ -100,15 +105,12 @@ h1{
         height: 200px;
         border-radius: 100%;
         overflow: hidden;
-        img{
-            object-position: -10px -10px;
-        }
     }
     &__name{
         color: $secondary-color;
         font-size: 2.25em;
         font-weight: 400;
-        margin-bottom: 0;
+        margin: 15px 0 0 0;
     }
     &__location{
         color: $primary-color;
