--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -35,7 +35,7 @@ body{
 }
 
 .logo{
-    margin: 10px 50px 0 50px;
+    margin: 10px 86px 0 100px;
 }
 
 .categories{
@@ -43,7 +43,7 @@ body{
     flex-wrap: wrap;
     justify-content: center;
     &--banner{
-        padding: 0 450px 0 60px;
+        padding: 0 450px 0 0px;
     }
     .tag{
         list-style: none;
@@ -74,7 +74,7 @@ main{
 h1{
     position: absolute;
     margin: 0;
-    right: 70px;
+    right: 90px;
     top: -140px;
     font-size: 2.25em;
     font-weight: 400;
@@ -84,8 +84,8 @@ h1{
 #photographers-section{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    margin-right: 30px;
+    justify-content: space-around;
+    margin: 0 -60px;
 }
 
 .photographer-card{
