--- a/styles/photographer.css
+++ b/styles/photographer.css
@@ -108,6 +108,21 @@ body {
   color: white;
   font-size: 1.5em;
   font-weight: 500;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#photographer-form {
+  display: none;
 }
 
 /* MEDIAS QUERIES */
