--- a/styles/photographer.scss
+++ b/styles/photographer.scss
@@ -87,9 +87,18 @@ body{
             color: white;
             font-size: 1.5em;
             font-weight: 500;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             }
         }
 
+}
+
+#photographer-form{
+    display: none;
 }
 
 /* MEDIAS QUERIES */
