--- a/styles/photographer.css
+++ b/styles/photographer.css
@@ -89,40 +89,78 @@ body {
 
 .photographer-card .tag__link:hover, .photographer-card .tag__link:focus {
   background-color: #901C1C;
-  border: #901C1C;
+  border: 1px solid #901C1C;
   color: white;
 }
 
-.photographer-card__button {
+.photographer-card #photographer-card__button {
   width: 170px;
   height: 69px;
   background-color: #901C1C;
   border: none;
+  cursor: pointer;
   border-radius: 5px;
   padding: 0;
-}
-
-.photographer-card__button-link {
   font-family: 'DM Sans', sans-serif;
-  text-decoration: none;
   color: white;
-  font-size: 1.5em;
-  font-weight: 500;
-  width: 100%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  font-size: 1.25em;
+  font-weight: 700;
 }
 
 #photographer-form {
-  display: none;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #DB8876;
+  padding: 35px;
+  border-radius: 5px;
+}
+
+#photographer-form h1 {
+  font-size: 4em;
+  margin-top: 0;
+}
+
+#photographer-form label {
+  font-size: 2.25em;
+  color: #312E2E;
+}
+
+#photographer-form input {
+  height: 68px;
+  border-radius: 5px;
+  border: none;
+}
+
+#photographer-form #message {
+  height: 170px;
+}
+
+#photographer-form #submit {
+  font-size: 1.125em;
+  font-weight: 700;
+  color: white;
+  height: 69px;
+  width: 170px;
+  background-color: #901C1C;
+  border: none;
+  border-radius: 5px;
+  margin-top: 26px;
+}
+
+#photographer-form #close {
+  position: absolute;
+  right: 35px;
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  color: white;
+  font-size: 2.625em;
 }
 
 /* MEDIAS QUERIES */
