--- a/styles/photographer.scss
+++ b/styles/photographer.scss
@@ -69,36 +69,70 @@ body{
             border-radius: 11px;
             &:hover, &:focus{
                 background-color: $primary-color;
-                border: $primary-color;
+                border: 1px solid $primary-color;
                 color: white;
             }
         }
     }
-    &__button{
+    #photographer-card__button{
             width: 170px;
             height: 69px;
             background-color: #901C1C;
             border: none;
+            cursor: pointer;
             border-radius: 5px;
             padding: 0;
-            &-link{
             font-family: 'DM Sans', sans-serif;
-            text-decoration: none;    
             color: white;
-            font-size: 1.5em;
-            font-weight: 500;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            }
+            font-size: 1.25em;
+            font-weight: 700;
         }
 
 }
 
 #photographer-form{
-    display: none;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    background-color: #DB8876;
+    padding: 35px;
+    border-radius: 5px;
+    h1{
+        font-size: 4em;
+        margin-top: 0;
+    }
+    label{        
+        font-size: 2.25em;
+        color: #312E2E;
+    }
+    input{        
+        height: 68px;
+        border-radius: 5px;
+        border: none;
+    }
+    #message{
+        height: 170px;
+    }
+    #submit{
+        font-size: 1.125em;
+        font-weight: 700;
+        color: white;
+        height: 69px;
+        width: 170px;
+        background-color: $primary-color;
+        border: none;
+        border-radius: 5px;
+        margin-top: 26px;
+    }
+    #close{
+        position: absolute;
+        right: 35px;
+        border: none;
+        padding: 0;
+        background-color: transparent;
+        color: white;
+        font-size: 2.625em;
+    }
 }
 
 /* MEDIAS QUERIES */
