--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -58,7 +58,7 @@ body{
             border-radius: 11px;
             &:hover, &:focus{
                 background-color: $primary-color;
-                border: $primary-color;
+                border: 1px solid $primary-color;
                 color: white;
             }
         }
