--- a/styles/photographer.css
+++ b/styles/photographer.css
@@ -171,6 +171,61 @@ body {
   cursor: pointer;
 }
 
+#pictures-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+#pictures-section .picture-card {
+  margin-right: 20px;
+}
+
+#pictures-section .picture-card__link-image {
+  width: 350px;
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#pictures-section .picture-card__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  color: #901C1C;
+  font-size: 1.5em;
+}
+
+#pictures-section .picture-card__info-title {
+  color: #901C1C;
+  font-weight: 400;
+  text-overflow: ellipsis;
+  max-width: 250px;
+}
+
+#pictures-section .picture-card__info-likes {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 500;
+}
+
+#pictures-section .picture-card__info-likes .fa-heart {
+  margin-left: 7px;
+  font-size: 21px;
+}
+
 /* MEDIAS QUERIES */
 /* TABLET */
 /* MOBILE */
