--- a/styles/photographer.scss
+++ b/styles/photographer.scss
@@ -144,6 +144,42 @@ body{
     }
 }
 
+#pictures-section{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    
+    .picture-card{
+        margin-right: 20px;
+        &__link-image{
+            width: 350px;
+            height: 300px;
+            object-fit: cover;
+        }
+        &__info{
+            display: flex;
+            justify-content: space-between;
+            color: $primary-color;
+            font-size: 1.5em;
+            &-title{
+                color: $primary-color;
+                font-weight: 400;
+                text-overflow: ellipsis;
+                max-width: 250px;
+            }
+            &-likes{
+                display: flex;
+                align-items: center;
+                font-weight: 500;
+                .fa-heart{
+                    margin-left: 7px;
+                    font-size: 21px;
+                }
+            }
+        }
+    }
+}
+
 /* MEDIAS QUERIES */
 
 /* TABLET */
