--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -56,6 +56,7 @@ body{
             padding: 3px 7px;
             border: 1px solid #C4C4C4;
             border-radius: 11px;
+            cursor: pointer;
             &:hover, &:focus{
                 background-color: $primary-color;
                 border: 1px solid $primary-color;
