--- a/styles/photographer.css
+++ b/styles/photographer.css
@@ -278,6 +278,39 @@ header {
   font-size: 21px;
 }
 
+/* LIGHTBOX */
+.lightbox {
+  margin: 62px auto;
+  border: none;
+  display: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.lightbox__figure {
+  max-width: 1250px;
+}
+
+.lightbox__figure-picture {
+  max-width: 1050px;
+  max-height: 900px;
+  border-radius: 5px;
+}
+
+.lightbox__arrows {
+  color: #901C1C;
+  font-size: 3em;
+}
+
+.lightbox__x {
+  color: #901C1C;
+  font-size: 2.625em;
+  position: absolute;
+  top: 32px;
+  right: 32px;
+}
+
 /* MEDIAS QUERIES */
 /* TABLET */
 /* MOBILE */
