--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -57,11 +57,11 @@ body{
             border: 1px solid #C4C4C4;
             border-radius: 11px;
             cursor: pointer;
-            &:hover, &:focus{
-                background-color: $primary-color;
-                border: 1px solid $primary-color;
-                color: white;
-            }
+        }
+        &__selected{
+            background-color: $primary-color;
+            border: 1px solid $primary-color;
+            color: white;
         }
     }
 }
