--- a/styles/photographer.scss
+++ b/styles/photographer.scss
@@ -22,7 +22,7 @@ header{
     display: flex;
     padding: 50px;
     background-color: #FAFAFA;
-    height: 200px;
+    min-height: 200px;
     position: relative;
     border-radius: 5px;
     &__info{
@@ -220,6 +220,7 @@ header{
                 &-icon{
                     margin-left: 7px;
                     font-size: 21px;
+                    cursor: pointer;
                 }
             }
         }
@@ -244,6 +245,7 @@ header{
     &__arrows{
         color: $primary-color;
         font-size: 3em;
+        cursor: pointer;
     }
     &__x{
         color: $primary-color;
@@ -251,6 +253,7 @@ header{
         position: absolute;
         top: 32px;
         right: 32px;
+        cursor: pointer;
     }
 }
 
