--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,9 +94,9 @@ h1 {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  margin: 0 -60px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .photographer-card {
@@ -110,8 +110,8 @@ h1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 50px 20px;
-  min-width: 25%;
+  margin: 50px 0px;
+  min-width: 33%;
 }
 
 .photographer-card__link {
