--- a/styles/photographer.scss
+++ b/styles/photographer.scss
@@ -19,20 +19,16 @@ header{
 /* MAIN */
 
 .photographer-card{
-    display: flex;
+    display: grid;
+    grid-template-areas: "a b c";
+    grid-template-columns: max-content;
     padding: 50px;
     background-color: #FAFAFA;
     min-height: 200px;
-    position: relative;
     border-radius: 5px;
     &__info{
+        grid-area: a;
         margin-right: 17px;
-    }
-    &__link{
-        text-decoration: none;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
     }
     &__name{
         color: $secondary-color;
@@ -54,13 +50,20 @@ header{
         display: flex;
         padding: 0;
     }
-    &__picture{
+    &__picture-container{
+        grid-area: c;
         width: 200px;
         height: 200px;
         border-radius: 100%;
         overflow: hidden;
-        position: absolute;
-        right: 50px;
+        justify-self: right;
+        align-self: center;
+        margin-left: 50px;
+    }
+    &__picture{
+        object-fit: cover;
+        width: 200px;
+        height: 200px;
     }
         .tag{
             list-style: none;
@@ -80,20 +83,21 @@ header{
             }
         }
     }
-    #photographer-card__button{
-            width: 170px;
-            height: 69px;
-            background-color: #901C1C;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-            padding: 0;
-            font-family: 'DM Sans', sans-serif;
-            color: white;
-            font-size: 1.25em;
-            font-weight: 700;
-        }
+}
 
+#photographer-card__button{
+    grid-area: b;
+    width: 170px;
+    height: 69px;
+    background-color: #901C1C;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    padding: 0;
+    font-family: 'DM Sans', sans-serif;
+    color: white;
+    font-size: 1.25em;
+    font-weight: 700;
 }
 
 #photographer-form{
@@ -155,6 +159,8 @@ header{
     font-size: 1.125em;
     &__label{
         margin-right: 25px;
+        font-weight: 700;
+        font-size: 1.125em;
     }
     &__select{
         color: white;
@@ -199,29 +205,43 @@ header{
         &__link-image{
             width: 350px;
             height: 300px;
+            border-radius: 5px;
             object-fit: cover;
             cursor: pointer;
         }
         &__info{
-            display: flex;
-            justify-content: space-between;
+            display: grid;
+            grid-template-areas: "a b c";
+            grid-template-columns: 1fr auto auto;
             color: $primary-color;
             font-size: 1.5em;
+            margin-bottom: 10px;
             &-title{
+                grid-area: a;
+                margin-top: 12px;
                 color: $primary-color;
                 font-weight: 400;
                 text-overflow: ellipsis;
                 max-width: 250px;
             }
             &-likes{
+                font-weight: 500;
+                margin-top: 10px;
+                grid-area: b;
+                justify-self: right;
                 display: flex;
                 align-items: center;
-                font-weight: 500;
                 &-icon{
-                    margin-left: 7px;
+                    margin: -14px 0 0 7px;
                     font-size: 21px;
                     cursor: pointer;
                 }
+            }
+            &-add-like{                
+                grid-area: c;
+                display: flex;
+                align-items: center;
+                justify-self: right;
             }
         }
     }
